# The-Ray-Tracer-Challenge-in-cpp-by-arss5

./: CMakeLists.txt  README.md  rascunho.txt  script.sh
chapters/: 2.cpp
include/: camera.hpp  canvas.cpp  canvas.hpp  color.hpp  computations.hpp  intersection.hpp  intersections.hpp  lights.hpp  materials.hpp  matrices.hpp  rays.hpp  spheres.hpp  transformations.hpp  tuple.hpp  world.hpp
ppm/: Capítulo 2.ppm  Capítulo 6.ppm  Esfera.ppm  Vremeio.ppm  aaaaaaaaaaaa.ppm  out__1804289383.ppm
src/: main.cpp  main2.cpp
src/lights/: lights.cpp
src/objects/: materials.cpp  spheres.cpp
src/primitives/: canvas.cpp  color.cpp  intersection.cpp  intersections.cpp  matrices.cpp  rays.cpp  transformations.cpp  tuple.cpp
src/scene/: camera.cpp  computations.cpp  world.cpp
tests/: camera_test.cpp  canvas_test.cpp  intersections_test.cpp  lights_test.cpp  materials_test.cpp  matrices_test.cpp  rays_test.cpp  spheres_test.cpp  test1.cpp  test2.cpp  transformations_test.cpp  tuple.cpp  tuple_test.cpp  world_test.cpp
